# uc-ts

./: .gitignore  CMakeLists.txt  build.sh  conanfile.txt
configs/: ucts.cfg  ucts.ini
scripts/: sync_ts.sh
src/: ts_case.cpp  ts_case.h  uc_ts.cpp
test/: shm_probe.cpp
